--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flip",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://darajava.github.io/flip",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
